--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h3><a href="recipes/carbonara.html"></a>Classic Carbonara with Pancetta</h3>
     </body>
 </html>
